added Azure SQL Check

--- a/TestConnectionsApp/TestConnectionsApp.csproj
+++ b/TestConnectionsApp/TestConnectionsApp.csproj
@@ -4,6 +4,11 @@
     <TargetFramework>net6.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <UserSecretsId>a4a6a823-f787-4b04-bbf7-61f0c92b0187</UserSecretsId>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Data.SqlClient" Version="5.1.1" />
+  </ItemGroup>
 
 </Project>
