--- a/TestConnectionsApp/appsettings.json
+++ b/TestConnectionsApp/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "SampleDB": "Server=tcp:yourdbserver.database.windows.net,1433;Initial Catalog=SampleDB;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;Authentication=Active Directory Default;"
+  }
 }
