add redis test and cleanup display

--- a/TestConnectionsApp/appsettings.json
+++ b/TestConnectionsApp/appsettings.json
@@ -6,7 +6,9 @@
     }
   },
   "AllowedHosts": "*",
+  /* If putting in actual passwords/keys then use UserSecrets instead of putting in here */
   "ConnectionStrings": {
     "SampleDB": "Server=tcp:yourdbserver.database.windows.net,1433;Initial Catalog=SampleDB;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;Authentication=Active Directory Default;"
-  }
+  },
+  "CacheConnection": "yourredisserver.redis.cache.windows.net:6380,password=youraccesskey,ssl=True,abortConnect=False"
 }
